src/objects/AB2__AdBook_SF_Opp_Status_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This setting contains the mapping for AdBook and Salesforce Opportunity Statuses</description>
    <fields>
        <fullName>AB2__AdBook_Status__c</fullName>
        <label>AdBook Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates any drops on the Order in this stage should be cancelled.</description>
        <inlineHelpText>Indicates any drops on the Order in this stage should be cancelled.</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Color__c</fullName>
        <defaultValue>&apos;#000000&apos;</defaultValue>
        <description>Color to display for Newsletter Availability based on the OrderStatusId, E.g. #FF0000 for red</description>
        <inlineHelpText>Color to display for Newsletter Availability based on the OrderStatusId, E.g. #FF0000 for red</inlineHelpText>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OrderStatusID__c</fullName>
        <label>OrderStatusID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AdBook_SF_Opp_Status_Mapping</label>
</CustomObject>